force-app/main/default/objects/msmxSheet__MsmxPersonalizationSetting__c/msmxSheet__MsmxPersonalizationSetting__c.object-meta.xml
<CustomObject>
    <label>Mashmatrix Personalization Setting</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>