force-app/main/default/objects/msmxSheet__MsmxPersonalizationSetting__c/fields/msmxSheet__RecordKey__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__RecordKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>{Book ID}:{Sheet ID}:{Owner ID}</description>
    <externalId>true</externalId>
    <label>Record Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>