force-app/main/default/objects/msmxSheet__MsmxPersonalizationSetting__c/fields/msmxSheet__SheetId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SheetId__c</fullName>
    <externalId>true</externalId>
    <label>SheetId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>