force-app/main/default/objects/msmxSheet__MsmxPersonalizationSetting__c/fields/msmxSheet__SheetKey__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SheetKey__c</fullName>
    <description>{Book ID}:{Sheet ID}</description>
    <externalId>true</externalId>
    <label>SheetKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>